--- a/sablona-prace.tex
+++ b/sablona-prace.tex
@@ -136,6 +136,7 @@
 \usepackage{placeins} % prikaz \FloatBarrier (nedovoli obrazky presunout do jine sekce)
 \usepackage{float}		% [H] u obrazku/tabulek
 \usepackage{soul}			% prikaz \hl (highlight)
+\usepackage{multirow}
 %\sethlcolor{yellow}		% barva pro highlight
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%       Začátek dokumentu               %%%%%%%%%%%%%%%%%%%%%
