--- a/text/jtag_riscv.tex
+++ b/text/jtag_riscv.tex
@@ -1,6 +1,6 @@
 \chapter{Komunikační protokol JTAG}
 %Tato kapitola popisuje princip přenosu dat pomocí komunikačního protokolu JTAG a jeho použití pro testování obvodů obsahující procesor architektury \acs{RISC} (\textit{\acl{RISC}}) s instrukční sadou \acs{RISC-V}. V kapitole je také přiblížen princip fungování systémové sběrnice použitého \acs{RISC-V} procesoru.
-Tato kapitola popisuje princip přenosu dat pomocí komunikačního protokolu JTAG a jeho použití pro testování obvodů obsahujících procesor s instrukční sadou \acs{RISC-V}. V kapitole je také přiblížen princip fungování systémové sběrnice použitého \acs{RISC-V} procesoru.
+Tato kapitola popisuje princip přenosu dat pomocí komunikačního protokolu \acs{JTAG} a jeho použití pro testování obvodů obsahujících procesor s instrukční sadou \acs{RISC-V}. V kapitole je také přiblížen princip fungování systémové sběrnice použitého \acs{RISC-V} procesoru.
 
 \section{Základní popis \acs{JTAG} protokolu}
 \acs{JTAG} (\textit{\acl{JTAG}}) je standardizovaná komunikační sběrnice určená pro testování integrovaných obvodů a \acs{DPS} (\textit{\acl{DPS}}).
