--- a/text/literatura.tex
+++ b/text/literatura.tex
@@ -41,6 +41,9 @@ TRENZ ELECTRONIC GMBH. \textit{TE0725 TRM}. Online. 2018. Dostupné z: \url{http
 \bibitem{TE0725_sch}
 TRENZ ELECTRONIC GMBH. \textit{TE0725 schematic}. Online. 2016. Dostupné z: \url{https://shop.trenz-electronic.de/trenzdownloads/Trenz\_Electronic/Modules\_and\_Module\_Carriers/3.5x7.3/TE0725/REV03/Documents/SCH-TE0725-03-100-2C.PDF}. [cit. 2024-03-05].
 
+\bibitem{PyFtdi_doc}
+\textit{PyFtdi - Dokumentace}. Online. 2010. Dostupné z: \url{https://eblot.github.io/pyftdi/index.html}. [cit. 2024-03-13].
+
 \end{thebibliography}
 
 
