--- a/text/zkratky.tex
+++ b/text/zkratky.tex
@@ -55,4 +55,6 @@
 		{Parallel Ultra Low Power}
 	\acro{MPSSE}
 		{Multi-Purpose Synchronous Serial Engine}
+	\acro{SVD}
+		{System View Description}
 \end{acronym}
